<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>oxts</name>
    <version>0.0.0</version>
    <description>
        ROS support for the OxTS RT/xNAV INS systems.
    </description>
    <maintainer email="smccarthy@oxts.com">smccarthy</maintainer>
    <author>Someone else maybe</author>
    <license>Apache 2.0</license>
    <url type="website">http://www.ros.org/wiki/velodyne</url>
    <url type="repository">https://github.com/OxfordTechnicalSolutions/oxts_ros2_driver</url>
    <url type="bugtracker">https://github.com/OxfordTechnicalSolutions/oxts_ros2_driver/issues</url> -->

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>oxts_driver</exec_depend>
    <exec_depend>oxts_msgs</exec_depend>
    <exec_depend>oxts_ins</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
