<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oxts_tests</name>
  <version>0.1.0</version>
  <description>A set of tests for the OxTS drivers.</description>
  <maintainer email="smccarthy@oxts.com">smccarthy</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>oxts_driver</depend>
  <depend>oxts_ins</depend>
  <depend>oxts_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
